# ComfyUI-LTX2-Microscope

./: .gitignore  README.md  __init__.py  pyproject.toml
nodes/: __init__.py
nodes/microscope/: broadcaster.py  nodes.py  patcher.py  wrapper.py
web/js/: nodes.js
web/js/colormaps/: bids.js  cividis.js  cmasher.js  cmocean.js  crameri.js  paraview.js
web/js/engine/: animator.js  datamanager.js  normalizer.js  settings.js
web/js/ui/: config.js  status.js  visualizer.js
